--- a/Logistic Regression Model/Logistice model median.ipynb
+++ b/Logistic Regression Model/Logistice model median.ipynb
@@ -69,7 +69,7 @@
        "      <th>country</th>\n",
        "      <th>region</th>\n",
        "      <th>ladder_score</th>\n",
-       "      <th>logged_GPD_per_capita</th>\n",
+       "      <th>logged_GDP_per_capita</th>\n",
        "      <th>social_support</th>\n",
        "      <th>healthy_life_expectancy</th>\n",
        "      <th>freedom_life_choices</th>\n",
@@ -179,7 +179,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       country       region  ladder_score  logged_GPD_per_capita  \\\n",
+       "       country       region  ladder_score  logged_GDP_per_capita  \\\n",
        "0      Finland       Europe         7.804                 10.792   \n",
        "1      Denmark       Europe         7.586                 10.962   \n",
        "2      Iceland       Europe         7.530                 10.896   \n",
@@ -336,7 +336,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>logged_GPD_per_capita</th>\n",
+       "      <th>logged_GDP_per_capita</th>\n",
        "      <th>social_support</th>\n",
        "      <th>healthy_life_expectancy</th>\n",
        "      <th>freedom_life_choices</th>\n",
@@ -431,7 +431,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   logged_GPD_per_capita  social_support  healthy_life_expectancy  \\\n",
+       "   logged_GDP_per_capita  social_support  healthy_life_expectancy  \\\n",
        "0                 10.792           0.969                   71.150   \n",
        "1                 10.962           0.954                   71.250   \n",
        "2                 10.896           0.983                   72.050   \n",
@@ -1110,7 +1110,7 @@
      "data": {
       "text/plain": [
        "[(1.5027339642727484, 'social_support'),\n",
-       " (1.2110747140987579, 'logged_GPD_per_capita'),\n",
+       " (1.2110747140987579, 'logged_GDP_per_capita'),\n",
        " (0.8573516598257989, 'freedom_life_choices'),\n",
        " (0.6418046110823283, 'healthy_life_expectancy'),\n",
        " (0.5434415629435844, 'median_age'),\n",
