--- a/Random Forest Model/Random forest.ipynb
+++ b/Random Forest Model/Random forest.ipynb
@@ -72,7 +72,7 @@
        "      <th>country</th>\n",
        "      <th>region</th>\n",
        "      <th>ladder_score</th>\n",
-       "      <th>logged_GPD_per_capita</th>\n",
+       "      <th>logged_GDP_per_capita</th>\n",
        "      <th>social_support</th>\n",
        "      <th>healthy_life_expectancy</th>\n",
        "      <th>freedom_life_choices</th>\n",
@@ -182,7 +182,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       country       region  ladder_score  logged_GPD_per_capita  \\\n",
+       "       country       region  ladder_score  logged_GDP_per_capita  \\\n",
        "0      Finland       Europe         7.804                 10.792   \n",
        "1      Denmark       Europe         7.586                 10.962   \n",
        "2      Iceland       Europe         7.530                 10.896   \n",
@@ -286,7 +286,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tg/jpl0p2w93ndfvsd8ln2wc1pw0000gn/T/ipykernel_69212/3803049779.py:2: FutureWarning: Series.ravel is deprecated. The underlying array is already 1D, so ravel is not necessary.  Use `to_numpy()` for conversion to a numpy array instead.\n",
+      "/var/folders/tg/jpl0p2w93ndfvsd8ln2wc1pw0000gn/T/ipykernel_71462/3803049779.py:2: FutureWarning: Series.ravel is deprecated. The underlying array is already 1D, so ravel is not necessary.  Use `to_numpy()` for conversion to a numpy array instead.\n",
       "  y = happiness_df[\"happiness\"].ravel()\n"
      ]
     }
@@ -508,7 +508,7 @@
      "data": {
       "text/plain": [
        "[(0.22439659273203696, 'social_support'),\n",
-       " (0.18234429797621682, 'logged_GPD_per_capita'),\n",
+       " (0.18234429797621682, 'logged_GDP_per_capita'),\n",
        " (0.14088679171186347, 'healthy_life_expectancy'),\n",
        " (0.106161265484144, 'median_age'),\n",
        " (0.05827259973483856, 'freedom_life_choices'),\n",
@@ -753,7 +753,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x17b84ab00>"
+       "<graphviz.sources.Source at 0x178117670>"
       ]
      },
      "metadata": {},
@@ -967,7 +967,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x177b4fee0>"
+       "<graphviz.sources.Source at 0x178116050>"
       ]
      },
      "metadata": {},
@@ -1079,7 +1079,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x17acdf970>"
+       "<graphviz.sources.Source at 0x178117670>"
       ]
      },
      "metadata": {},
