--- a/cleaning code.ipynb
+++ b/cleaning code.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "# Rename columns\n",
     "population_df.rename(columns={'name': 'country', 'density': 'population_density', 'region': 'region'}, inplace=True)\n",
-    "happinessindex_df.rename(columns={'Country name': 'country', 'Ladder score': 'ladder_score', 'Logged GDP per capita': 'logged_GPD_per_capita',\n",
+    "happinessindex_df.rename(columns={'Country name': 'country', 'Ladder score': 'ladder_score', 'Logged GDP per capita': 'logged_GDP_per_capita',\n",
     "                                  'Social support': 'social_support', 'Healthy life expectancy': 'healthy_life_expectancy',\n",
     "                                  'Freedom to make life choices': 'freedom_life_choices', 'Generosity': 'generosity',\n",
     "                                  'Perceptions of corruption': 'perceptions_corruption', }, inplace=True)\n",
@@ -160,7 +160,7 @@
       "\n",
       "Columns in merged DataFrame:\n",
       "Index(['country', 'ladder_score', 'Standard error of ladder score',\n",
-      "       'upperwhisker', 'lowerwhisker', 'logged_GPD_per_capita',\n",
+      "       'upperwhisker', 'lowerwhisker', 'logged_GDP_per_capita',\n",
       "       'social_support', 'healthy_life_expectancy', 'freedom_life_choices',\n",
       "       'generosity', 'perceptions_corruption', 'Ladder score in Dystopia',\n",
       "       'Explained by: Log GDP per capita', 'Explained by: Social support',\n",
@@ -192,7 +192,7 @@
     "    'country', \n",
     "    'region',\n",
     "    'ladder_score',\n",
-    "    'logged_GPD_per_capita', \n",
+    "    'logged_GDP_per_capita', \n",
     "    'social_support', \n",
     "    'healthy_life_expectancy',\n",
     "    'freedom_life_choices',\n",
@@ -248,7 +248,7 @@
        "      <th>country</th>\n",
        "      <th>region</th>\n",
        "      <th>ladder_score</th>\n",
-       "      <th>logged_GPD_per_capita</th>\n",
+       "      <th>logged_GDP_per_capita</th>\n",
        "      <th>social_support</th>\n",
        "      <th>healthy_life_expectancy</th>\n",
        "      <th>freedom_life_choices</th>\n",
@@ -467,7 +467,7 @@
        "</div>"
       ],
       "text/plain": [
-       "          country       region  ladder_score  logged_GPD_per_capita  \\\n",
+       "          country       region  ladder_score  logged_GDP_per_capita  \\\n",
        "0         Finland       Europe         7.804                 10.792   \n",
        "1         Denmark       Europe         7.586                 10.962   \n",
        "2         Iceland       Europe         7.530                 10.896   \n",
@@ -556,7 +556,7 @@
        "country                     object\n",
        "region                      object\n",
        "ladder_score               float64\n",
-       "logged_GPD_per_capita      float64\n",
+       "logged_GDP_per_capita      float64\n",
        "social_support             float64\n",
        "healthy_life_expectancy    float64\n",
        "freedom_life_choices       float64\n",
