--- a/Logistic Regression Model/Logistic model mid point.ipynb
+++ b/Logistic Regression Model/Logistic model mid point.ipynb
@@ -1155,7 +1155,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x175613c40>"
+       "<IPython.lib.display.IFrame at 0x15441be20>"
       ]
      },
      "metadata": {},
