--- a/Logistic Regression Model/Logistic model midpoint.ipynb
+++ b/Logistic Regression Model/Logistic model midpoint.ipynb
@@ -1155,7 +1155,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x15441be20>"
+       "<IPython.lib.display.IFrame at 0x138a17f40>"
       ]
      },
      "metadata": {},
